# ornata-public

./: .coverage  .gitignore  .pylintrc  AGENTS.md  BUILD.md  MANIFEST.in  README.md  analyze.py  coverage.toml  coverage.xml  debug_actionbar.py  debug_ansi.py  debug_app_styling.py  debug_button.py  debug_button_text.py  debug_canvas.py  debug_cascade.py  debug_colors.py  debug_engine.py  debug_fg.py  debug_grid.py  debug_layout.py  debug_layout_tree.py  debug_layout_values.py  debug_layoutstyle.py  debug_length.py  debug_output.py  debug_runtime_cache.py  debug_sheet_parse.py  debug_sheets.py  debug_style.py  debug_termsize.py  debug_trace.py  pyproject.toml  pyrightconfig.json  pytest.ini  random.txt  setup.py  test_actionbar.py  test_color_parse.py  (+3 more)
docs/html/: index.html  ornata.__main__.html  ornata._lazy.html  ornata.api._warnings.html  ornata.api.exports.api.html  ornata.api.exports.cli.html  ornata.api.exports.components.html  ornata.api.exports.definitions.html  ornata.api.exports.effects.html  ornata.api.exports.events.html  ornata.api.exports.gpu.html  ornata.api.exports.html  ornata.api.exports.interop.html  ornata.api.exports.kernel.html  ornata.api.exports.layout.html  ornata.api.exports.optimization.html  ornata.api.exports.ornata.html  ornata.api.exports.plugins.html  ornata.api.exports.rendering.html  ornata.api.exports.styling.html  ornata.api.exports.utils.html  ornata.api.exports.vdom.html  ornata.api.html  ornata.api.public_exports.html  ornata.application.html  ornata.cli.__main__.html  ornata.cli.html  ornata.cli.main.html  ornata.components.base.html  ornata.components.button.html  ornata.components.container.html  ornata.components.html  ornata.components.input.html  ornata.components.table.html  ornata.components.text.html  ornata.core.application.html  ornata.core.html  ornata.core.runtime.html  ornata.definitions.constants.html  ornata.definitions.dataclasses.components.html  (+298 more)
examples/: mock_app.py
examples/styles/: base.osts
src/ornata/: __init__.py  __main__.py  _lazy.py  application.py
tests/: conftest.py  test_api_exports.py  test_module_imports.py
tests/cli/: test_cli_integration.py
tests/components/: test_components.py
tools/: full_system_runner.py  generate_docs.py  system_probe.py  system_test.py
(+406 files in other folders)
