[project]
name = "ornata"
version = "0.7.0"
description = "Next-generation terminal text & UI formatting engine"
authors = [{ name = "Sarenian71" }]
license = { text = "MIT" }
requires-python = ">=3.14"
readme = "README.md"
dependencies = []
optional-dependencies = { legacy_windows = ["colorama>=0.4.6"], jupyter = ["ipython>=8"] }
keywords = ["terminal", "ansi", "tui", "console", "rendering"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://example.com/ornata"
Source = "https://example.com/ornata/repo"
Issues = "https://example.com/ornata/issues"

[project.scripts]
ornata = "ornata.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
warn_unreachable = true
strict = true
exclude = [
  ".venv",
  "314",
  "build",
  "dist",
  "__pycache__",
  "tests",
]

[dependency-groups]
dev = [
    "cython>=3.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 200
target-version = "py314"
lint.select = ["E", "F", "I", "UP", "B", "TID252"]
lint.ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
ornata = ["**/*.txt", "**/*.md", "**/*.osts", "tests/snapshots/*.txt"]

[tool.setuptools.exclude-package-data]
ornata = ["**/*.pyx"]

[tool.cython]
compiler_directives = { language_level = "3", boundscheck = false, wraparound = false, initializedcheck = false, nonecheck = false, overflowcheck = false }
build_ext = { inplace = false }
